--- a/app/views/home/pricing.html.erb
+++ b/app/views/home/pricing.html.erb
@@ -1,169 +1,199 @@
 <div class="pricing_container mt40">
   <div class='container'>
-    <div class="module-pricing-area">
+    <div class="module-pricing-area" >
       <div class="module-pricing-area-header mt40 mb30">
-        <h2>Our Modules</h2>
+        <h2>Our Services</h2>
       </div>
 
-      <div id="pp">
-        <div class="col-xs-12 col-sm-6 col-md-3">
-          <div class='pricing animated swing'>
-            <div class='thumbnail animated pulse infinite'>
-              <div class='faxx fa-paper-planexx'>
-                <%#= image_tag('module_settings/white_icon/employees.png', width: 50) %>
-                <%= image_tag('icon.svg', width: 50) %>
-              </div>
-            </div>
-            <div class='title'>
-              Employee & HR
-            </div>
-            <div class='content'>
-              <div class='sub-title'>
-                BDT 1000
-              </div>
-              <ul>
-                <li> Employee’s hourly schedule</li>
-                <li> Keep track of all employee</li>
-                <li> Add new employee</li>
-                <li> Employee setting and report</li>
-                <li> All access right</li>
-                <li> Dashboard, Profile, Advance...</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-xs-12 col-sm-6 col-md-3">
-          <div class='pricing animated swing'>
-            <div class='thumbnail animated pulse infinite'>
-              <div class=''>
-                <%#= image_tag('module_settings/white_icon/leave.png', width: 50) %>
-                <%= image_tag('icon.svg', width: 50) %>
-              </div>
-            </div>
-            <div class='title'>
-              Leave
-            </div>
-            <div class='content'>
-              <div class='sub-title'>
-                BDT 1000
-              </div>
-              <ul>
-                <li> Category and dashboard</li>
-                <li> Leave settings</li>
-                <li> Leave application</li>
-                <li> Leave calender</li>
-                <li> Recent leave state</li>
-                <li> Leave report, summary, transfer...</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-xs-12 col-sm-6 col-md-3">
-          <div class='pricing animated swing'>
-            <div class='thumbnail animated pulse infinite'>
-              <div class=''>
-                <%#= image_tag('module_settings/white_icon/attendance.png', width: 50) %>
-                <%= image_tag('icon.svg', width: 50) %>
-              </div>
-            </div>
+      <div id="pp" >
+        <div class="col-xs-12 col-sm-6 col-md-4" style="margin-top: 16px">
+          <div class='pricing animated# swing#' style="padding-top: 14px">
+            <!--            <div class='thumbnail animated pulse infinite'>-->
+            <!--              <div class=''>-->
+            <%#= image_tag('module_settings/white_icon/attendance.png', width: 50) %>
+            <%#= image_tag('icon.svg', width: 50) %>
+            <!--              </div>-->
+            <!--            </div>-->
             <div class='title'>
               Attendance
             </div>
             <div class='content'>
-              <div class='sub-title'>
-                BDT 1000
-              </div>
               <ul>
-                <li> Attendance time schedule settings</li>
-                <li> Employee in/out history</li>
-                <li> BioMetric attendance</li>
-                <li> Offline online employee tracking</li>
-                <li> Working hours and leave tracking</li>
-                <li> Report, Custom holiday, Holiday.....</li>
+                <li> <i class="fa fa-check" aria-hidden="true"></i> Attendance time schedule settings</li>
+                <li> <i class="fa fa-check" aria-hidden="true"></i> Employee in/out history</li>
+                <li> <i class="fa fa-check" aria-hidden="true"></i> BioMetric attendance</li>
+                <li> <i class="fa fa-check" aria-hidden="true"></i> Offline online employee tracking</li>
+                <li> <i class="fa fa-check" aria-hidden="true"></i> Working hours and leave tracking</li>
+                <li> <i class="fa fa-check" aria-hidden="true"></i> Report, Custom holiday, Holiday.....</li>
               </ul>
+              <hr>
+              <h5 style="text-align: center"> BDT 1000 </h5>
+              <div class='sub-title'>
+                Buy Now
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4" style="margin-top: 16px">
+          <div class='pricing animated# swing#'  style="padding-top: 14px">
+<!--            <div class='thumbnail animated pulse infinite'>-->
+<!--              <div class='faxx fa-paper-planexx'>-->
+                <%#= image_tag('module_settings/white_icon/employees.png', width: 50) %>
+                <%#= image_tag('icon.svg', width: 50) %>
+<!--              </div>-->
+<!--            </div>-->
+            <div class='title'>
+              Employee & HR
+            </div>
+            <div class='content'>
+              <ul>
+                <li>
+                  <i class="fa fa-check" aria-hidden="true"></i>
+                  Employee’s hourly schedule
+                </li>
+                <li>
+                  <i class="fa fa-check" aria-hidden="true"></i>
+                  Keep track of all employee
+                </li>
+                <li>
+                  <i class="fa fa-check" aria-hidden="true"></i>
+                  Add new employee
+                </li>
+                <li>
+                  <i class="fa fa-check" aria-hidden="true"></i>
+                  Employee setting and report
+                </li>
+                <li>
+                  <i class="fa fa-check" aria-hidden="true"></i>
+                  All access right
+                </li>
+                <li>
+                  <i class="fa fa-check" aria-hidden="true"></i>
+                  Dashboard, Profile, Advance...
+                </li>
+              </ul>
+              <hr>
+              <h5 style="text-align: center"> BDT 1000 </h5>
+              <div class='sub-title'>
+                Buy Now
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4" style="margin-top: 16px">
+          <div class='pricing animated# swing#' style="padding-top: 14px">
+<!--            <div class='thumbnail animated pulse infinite'>-->
+<!--              <div class=''>-->
+                <%#= image_tag('module_settings/white_icon/leave.png', width: 50) %>
+                <%#= image_tag('icon.svg', width: 50) %>
+<!--              </div>-->
+<!--            </div>-->
+            <div class='title'>
+              Leave
+            </div>
+            <div class='content'>
+              <ul>
+                <li>   <i class="fa fa-check" aria-hidden="true"></i> Category and dashboard</li>
+                <li>   <i class="fa fa-check" aria-hidden="true"></i>  Leave settings</li>
+                <li>   <i class="fa fa-check" aria-hidden="true"></i> Leave application</li>
+                <li>   <i class="fa fa-check" aria-hidden="true"></i> Leave calender</li>
+                <li>   <i class="fa fa-check" aria-hidden="true"></i> Recent leave state</li>
+                <li>   <i class="fa fa-check" aria-hidden="true"></i> Leave report, summary, transfer...</li>
+              </ul>
+              <hr>
+              <h5 style="text-align: center"> BDT 1000 </h5>
+              <div class='sub-title'>
+                Buy Now
+              </div>
             </div>
           </div>
         </div>
 
-        <div class="col-xs-12 col-sm-6 col-md-3">
-          <div class='pricing animated swing'>
-            <div class='thumbnail animated pulse infinite'>
-              <div class=''>
+
+
+        <div class="col-xs-12 col-sm-6 col-md-4" style="margin-top: 16px">
+          <div class='pricing animated# swing#' style="padding-top: 14px">
+<!--            <div class='thumbnail animated pulse infinite'>-->
+<!--              <div class=''>-->
                 <%#= image_tag('module_settings/white_icon/payroll.png', width: 50) %>
-                <%= image_tag('icon.svg', width: 50) %>
-              </div>
-            </div>
+                <%#= image_tag('icon.svg', width: 50) %>
+<!--              </div>-->
+<!--            </div>-->
             <div class='title'>
               Payroll
             </div>
             <div class='content'>
-              <div class='sub-title'>
-                BDT 1000
-              </div>
               <ul>
-                <li> Salary category</li>
-                <li> Individual salary for employee</li>
-                <li> Group salary for department</li>
-                <li> Bonuses salary for employee</li>
-                <li> Deductions from salary if needed</li>
-                <li> Pre process, Payslip, Report....</li>
+                <li> <i class="fa fa-check" aria-hidden="true"></i> Salary category</li>
+                <li> <i class="fa fa-check" aria-hidden="true"></i> Individual salary for employee</li>
+                <li> <i class="fa fa-check" aria-hidden="true"></i> Group salary for department</li>
+                <li> <i class="fa fa-check" aria-hidden="true"></i> Bonuses salary for employee</li>
+                <li> <i class="fa fa-check" aria-hidden="true"></i> Deductions from salary if needed</li>
+                <li> <i class="fa fa-check" aria-hidden="true"></i> Pre process, Payslip, Report....</li>
               </ul>
+              <hr>
+              <h5 style="text-align: center"> BDT 1000 </h5>
+              <div class='sub-title'>
+                Buy Now
+              </div>
             </div>
           </div>
         </div>
 
-        <div class="col-xs-12 col-sm-6 col-md-3">
-          <div class='pricing animated swing'>
-            <div class='thumbnail animated pulse infinite'>
-              <div class=''>
+        <div class="col-xs-12 col-sm-6 col-md-4" style="margin-top: 16px">
+          <div class='pricing animated# swing#' style="padding-top: 14px">
+<!--            <div class='thumbnail animated pulse infinite'>-->
+<!--              <div class=''>-->
                 <%#= image_tag('module_settings/white_icon/provident_fund.png', width: 50) %>
-                <%= image_tag('icon.svg', width: 50) %>
-              </div>
-            </div>
+                <%#= image_tag('icon.svg', width: 50) %>
+<!--              </div>-->
+<!--            </div>-->
             <div class='title'>
               Provident Fund
             </div>
             <div class='content'>
-              <div class='sub-title'>
-                BDT 1000
-              </div>
               <ul>
-                <li> To support HR</li>
-                <li> FP account for eligible people</li>
-                <li> Employee and company contribution</li>
-                <li> PF roules and policy</li>
-                <li> Loan and advance form PF</li>
-                <li> Investment, Return, Report...</li>
+                <li> <i class="fa fa-check" aria-hidden="true"></i> To support HR</li>
+                <li> <i class="fa fa-check" aria-hidden="true"></i> FP account for eligible people</li>
+                <li> <i class="fa fa-check" aria-hidden="true"></i> Employee and company contribution</li>
+                <li> <i class="fa fa-check" aria-hidden="true"></i> PF rules and policy</li>
+                <li> <i class="fa fa-check" aria-hidden="true"></i> Loan and advance form PF</li>
+                <li> <i class="fa fa-check" aria-hidden="true"></i> Investment, Return, Report...</li>
               </ul>
+              <hr>
+              <h5 style="text-align: center"> BDT 1000 </h5>
+              <div class='sub-title'>
+                Buy Now
+              </div>
             </div>
           </div>
         </div>
 
-        <div class="col-xs-12 col-sm-6 col-md-3">
-          <div class='pricing animated swing'>
-            <div class='thumbnail animated pulse infinite'>
-              <div class=''>
+        <div class="col-xs-12 col-sm-6 col-md-4" style="margin-top: 16px">
+          <div class='pricing animated# swing#' style="padding-top: 14px">
+<!--            <div class='thumbnail animated pulse infinite'>-->
+<!--              <div class=''>-->
                 <%#= image_tag('module_settings/white_icon/expense.png', width: 50) %>
-                <%= image_tag('icon.svg', width: 50) %>
-              </div>
-            </div>
+                <%#= image_tag('icon.svg', width: 50) %>
+<!--              </div>-->
+<!--            </div>-->
             <div class='title'>
               Expense
             </div>
             <div class='content'>
-              <div class='sub-title'>
-                BDT 1000
-              </div>
               <ul>
-                <li> Expanse category and budgets</li>
-                <li> Expense entry, approval and remark</li>
-                <li> Monthly or yearly report</li>
-                <li> Expense comparison</li>
-                <li> Expanse dashboard and cost monitoring</li>
-                <li> Report, Top expanse, Life expanse...</li>
+                <li> <i class="fa fa-check" aria-hidden="true"></i> Expanse category and budgets</li>
+                <li> <i class="fa fa-check" aria-hidden="true"></i> Expense entry, approval and remark</li>
+                <li> <i class="fa fa-check" aria-hidden="true"></i> Monthly or yearly report</li>
+                <li> <i class="fa fa-check" aria-hidden="true"></i> Expense comparison</li>
+                <li> <i class="fa fa-check" aria-hidden="true"></i> Expanse dashboard and cost monitoring</li>
+                <li> <i class="fa fa-check" aria-hidden="true"></i> Report, Top expanse, Life expanse...</li>
               </ul>
+              <hr>
+              <h5 style="text-align: center"> BDT 1000 </h5>
+              <div class='sub-title'>
+                Buy Now
+              </div>
             </div>
           </div>
         </div>
