--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
 <%= render 'shared/modal' %>
 <%= render 'shared/flash_message' %>
 <%= render 'shared/footers_selection' %>
-<%= render 'shared/feedback' %>
+<%#= render 'shared/feedback' %>
 <%#= render 'shared/google_analytics' %>
 </body>
 </html>
