--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -20,7 +20,7 @@
   <%= yield %>
 <%= render 'shared/footers_selection' %>
 <%= render 'shared/flash_message' %>
-<%= render 'shared/feedback' %>
+<%#= render 'shared/feedback' %>
 <%= render 'shared/modal' %>
 <%#= render 'shared/google_analytics' %>
 </body>
