--- a/app/views/employees/shared/_links.html.erb
+++ b/app/views/employees/shared/_links.html.erb
@@ -9,7 +9,7 @@
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
     <div class="custom-link-text">
       <%= link_to new_registration_path(resource_name) do%>
-          <i class="fa fa-laptop custom-link-text-icon"></i>Company Registration.
+          <i class="fa fa-laptop custom-link-text-icon"></i>Sign Up.
       <% end %>
     </div>
 <% end -%>
@@ -17,7 +17,7 @@
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
   <div class="custom-link-text">
     <%= link_to new_password_path(resource_name), remote: true do%>
-      <i class="fa fa-deaf custom-link-text-icon"></i>Forgot your password?
+      <i class="fa fa-deaf custom-link-text-icon"></i>Forgot password?
     <% end %>
   </div>
 <% end -%>
